@@ -2,8 +2,9 @@ package me.yonghong.algo.lc.lc0001;
 
 import me.yonghong.algo.Solution;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.Deque;
 import java.util.List;
 
 /**
@@ -29,13 +30,14 @@ public class Lc0046 implements Solution {
 
     public List<List<Integer>> permute(int[] nums) {
         List<List<Integer>> res = new ArrayList<>();
-        List<Integer> path = new LinkedList<>();
+        // 用 Deque 而不是用 Stack 是 Java 的建议
+        Deque<Integer> path = new ArrayDeque<>();
         boolean[] used = new boolean[nums.length];
         dfs(nums, used, path, res);
         return res;
     }
 
-    private void dfs(int[] nums, boolean[] used, List<Integer> path, List<List<Integer>> res) {
+    private void dfs(int[] nums, boolean[] used, Deque<Integer> path, List<List<Integer>> res) {
         if (path.size() == nums.length) {
             res.add(new ArrayList<>(path));
             return;
@@ -44,10 +46,10 @@ public class Lc0046 implements Solution {
             if (used[i]) {
                 continue;
             }
-            path.add(nums[i]);
+            path.addLast(nums[i]);
             used[i] = true;
             dfs(nums, used, path, res);
-            path.remove(path.size() - 1);
+            path.removeLast();
             used[i] = false;
         }
     }
